agent page login,registration complete

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1335,8 +1335,7 @@ div.cart_quantity_button{
 
 #form {
   display: block;
-  margin-bottom: 185px;
-  margin-top: 185px;
+  margin: 50px 0;
   overflow: hidden;
 }
 
@@ -1357,20 +1356,21 @@ div.cart_quantity_button{
 }
 
 
-.login-form form input, .signup-form form input {
-  background: #F0F0E9;
-  border: medium none;
-  color: #696763;
-  display: block;
-  font-family: 'Roboto', sans-serif;
-  font-size: 14px;
-  font-weight: 300;
-  height: 40px;
-  margin-bottom: 10px;
-  outline: medium none;
-  padding-left: 10px;
-  width: 100%;
+.login-form form input, .signup-form form input  {
+    background:#F0F0E9;
+    border:medium none;
+    color:#696763;
+    display:block;
+    font-family:Roboto, sans-serif;
+    font-size:14px;
+    font-weight:300;
+    height:55px;
+    margin-bottom:25px;
+    outline:none medium;
+    padding-left:10px;
+    width:100%;
 }
+
 
 .login-form form span{
   line-height: 25px;
@@ -2444,16 +2444,46 @@ div.cart_quantity_button{
 .panel-body { padding:0px; }
 .panel-body table tr td { padding-left: 15px }
 .panel-body .table {margin-bottom: 0px; }
-
+.member-area{
+    min-height:450px;
+}
 .section-padding{
     padding: 30px 0;
 }
 
-.place-order{
-    margin-bottom:20px;
+
+
+#cart_items form button{
+    padding: 5px 14px;
+    font-size:20px;
 }
 
-.place-order button{
-    padding: 12px 0;
-    font-size:20px;
+div.logo h3{}
+div.logo h3 a{}
+div.logo h3 a span{
+    color:#FE980F;
+    color:#FE980F;
+}
+
+span.pagination a {
+    background: #F0F0E9 none repeat scroll 0 0;
+    border: 1px solid #F0F0E9;
+    color: #333;
+    padding: 7px 12px;
+    margin-left: 4px;
+}
+span.pagination a:hover{
+    background: #FE980F none repeat scroll 0 0;
+    border: 1px solid #FE980F;
+    color: #fff;
+}
+
+/*about page css*/
+.about-content{}
+.about-content p{
+    text-align: justify;
+}
+
+.registration-page{
+    margin-top: 20px;
 }
